fix: adjust card layout by setting widths and adding background colors for better visibility

--- a/style.css
+++ b/style.css
@@ -341,6 +341,8 @@ main {
 
 .card-content>.left-side {
   flex-grow: 1;
+  width: 50%;
+  background-color: red;
 }
 
 .card-content>.left-side>.card-description {
@@ -353,12 +355,15 @@ main {
 
 .card-content>.right-side {
   height: 75px;
+  width: 50%;
+  background-color: green;
 }
 
 .card-content>.right-side>img {
   width: 100%;
   height: 100%;
   object-fit: contain;
+
 }
 
 @media (min-width: 24rem) {
